--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
-    "hono": "^4.10.1"
+    "hono": "^4.10.1",
+    "mssql": "^12.0.0"
   },
   "devDependencies": {
+    "@types/mssql": "^9.1.8",
     "@types/node": "^20.11.17",
+    "esbuild": "^0.25.11",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
