--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "mssql": "^12.0.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mssql": "^9.1.8",
     "@types/node": "^20.11.17",
     "esbuild": "^0.25.11",
+    "hono-rate-limiter": "^0.4.2",
+    "jsonwebtoken": "^9.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
